Background image added

--- a/index.html
+++ b/index.html
@@ -12,38 +12,45 @@
 <body>
     <div class="container">
         <div class="sidearms">
-            <div class="box">teste</div>
+            <div class="box" id="title">Sidearms</div>
             <div class="box" id="classic">classic</div>
-            <div class="box"id="shorty">shorty</div>
-            <div class="box"id="frenzy">frenzy</div>
-            <div class="box"id="ghost">ghost</div>
-            <div class="box"id="sherif">sherif</div>
+            <div class="box" id="shorty">shorty</div>
+            <div class="box" id="frenzy">frenzy</div>
+            <div class="box" id="ghost">ghost</div>
+            <div class="box" id="sherif">sherif</div>
+
         </div>
         <div class="smgs">
-            <div class="box"id="stinger">stinger</div>
-            <div class="box"id="spectre">spectre</div>
+            <div class="box" id="title">SMGs</div>
+            <div class="box" id="stinger">stinger</div>
+            <div class="box" id="spectre">spectre</div>
         </div>
         <div class="rifles">
-            <div class="box"id="bulldog">bulldog</div>
-            <div class="box"id="guardian">guardian</div>
-            <div class="box"id="phanton">phanton</div>
-            <div class="box"id="vandal">vandal</div>
+            <div class="box" id="title">Rifles</div>
+            <div class="box" id="bulldog">bulldog</div>
+            <div class="box" id="guardian">guardian</div>
+            <div class="box" id="phanton">phanton</div>
+            <div class="box" id="vandal">vandal</div>
         </div>
         <div class="sniper">
-            <div class="box"id="marshal">marshal</div>
-            <div class="box"id="operator">operator</div>
+            <div class="box" id="title">Sniper</div>
+            <div class="box" id="marshal">marshal</div>
+            <div class="box" id="operator">operator</div>
         </div>
         <div class="armor">
-            <div class="box"id="light-shield">lightShield</div>
-            <div class="box"id="heavy-shield">heavy-shield</div>
+            <div class="box" id="title">Armor</div>
+            <div class="box" id="light-shield">lightShield</div>
+            <div class="box" id="heavy-shield">heavy-shield</div>
         </div>
         <div class="shotguns">
-            <div class="box"id="bucky">bucky</div>
-            <div class="box"id="judge">judge</div>
+            <div class="box" id="title">Shotguns</div>
+            <div class="box" id="bucky">bucky</div>
+            <div class="box" id="judge">judge</div>
         </div>
         <div class="machineguns">
-            <div class="box"id="ares">ares</div>
-            <div class="box"id="odin">odin</div>
+            <div class="box" id="title">Machineguns</div>
+            <div class="box" id="ares">ares</div>
+            <div class="box" id="odin">odin</div>
         </div>
 
     </div>
