Script js running well

--- a/index.html
+++ b/index.html
@@ -12,47 +12,23 @@
 <body>
     <div class="container">
         <div class="modal">
-
         </div>
         <div class="Sidearm">
-            <div class="box" id="title">Sidearms</div>
-            <div class="box" id="classic">Classic</div>
-            <div class="box" id="shorty"> Shorty</div>
-            <div class="box" id="frenzy">Frenzy</div>
-            <div class="box" id="ghost">Ghost</div>
-            <div class="box" id="sherif">Sherif</div>
         </div>
         <div class="SMG">
-            <div class="box" id="title">SMGs</div>
-            <div class="box" id="stinger">Stinger</div>
-            <div class="box" id="spectre">Spectre</div>
         </div>
         <div class="Rifle">
-            <div class="box" id="title">Rifles</div>
-            <div class="box" id="bulldog">Bulldog</div>
-            <div class="box" id="guardian">Guardian</div>
-            <div class="box" id="phanton">Phantom</div>
-            <div class="box" id="vandal">Vandal</div>
         </div>
         <div class="Sniper">
-            <div class="box" id="title">Sniper</div>
-            <div class="box" id="marshal">Marshal</div>
-            <div class="box" id="operator">Operator</div>
         </div>
         <div class="armor">
-            <div class="box" id="title">Armor</div>
+            <div id="title">Armor</div>
             <div class="box" id="light-shield">Light-Shield</div>
             <div class="box" id="heavy-shield">Heavy-Shield</div>
         </div>
         <div class="Shotgun">
-            <div class="box" id="title">Shotguns</div>
-            <div class="box" id="bucky">bucky</div>
-            <div class="box" id="judge">judge</div>
         </div>
         <div class="Heavy">
-            <div class="box" id="title">Machineguns</div>
-            <div class="box" id="ares">ares</div>
-            <div class="box" id="odin">odin</div>
         </div>
 
     </div>
