Css issues fixed - grid now is working

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </div>
         <div class="armor">
             <div id="title">Armor</div>
-            <div class="box" id="light-shield">Light-Shield</div>
-            <div class="box" id="heavy-shield">Heavy-Shield</div>
+            <div class="box" id="light-shield"> <img src="https://media.valorant-api.com/gear/4dec83d5-4902-9ab3-bed6-a7a390761157/shop/newimage.png" alt="" class="heavyArmor">Light-Shield</div>
+            <div class="box" id="heavy-shield"> <img src="https://media.valorant-api.com/gear/822bcab2-40a2-324e-c137-e09195ad7692/shop/newimage.png" alt="" class="heavyArmor">Heavy-Shield</div>
         </div>
         <div class="Shotgun">
         </div>
