Add some style at modal

--- a/index.html
+++ b/index.html
@@ -12,6 +12,51 @@
 <body>
     <div class="container">
         <div class="modal">
+            <div class="modalTitle">
+                <div>Phantom</div>
+                <div class="small-text">Rifle</div>
+            </div>
+            <div class="fireDesc">
+                <div>Primary Fire</div>
+                <div>Auto</div>
+                <div>Medium</div>
+            </div>
+            <div class="modalCard">
+                <div class="columCard">
+                    <div class="card">
+                        <div class="cardTitle">Fire Rate</div>
+                        <div class="cardInfo">11</div>
+                        <div class="unit">SEC</div>
+                    </div>
+                    <div class="card">
+                        <div class="cardTitleSpecial">Equip Speed</div>
+                        <div class="cardInfo">1</div>
+                        <div class="unit">SEC</div>
+                    </div>
+                    <div class="card">
+                        <div class="cardTitleSpecial">Reload Speed</div>
+                        <div class="cardInfo">2.5</div>
+                        <div class="unit">SEC</div>
+                    </div>
+                </div>
+                <div class="columCard">
+                    <div class="card">
+                        <div class="cardTitle">Run Speed</div>
+                        <div class="cardInfo">5.4</div>
+                        <div class="unit">M/SEC</div>
+                    </div>
+                    <div class="card">
+                        <div class="cardTitleSpecial">1st Shot Spread</div>
+                        <div class="cardInfoSpecial">0.2 / 0.11</div>
+                        <div class="unit">DEG (Hip/Ads)</div>
+                    </div>
+                    <div class="card">
+                        <div class="cardTitle">Magazine</div>
+                        <div class="cardInfo">30</div>
+                        <div class="unit">RDS</div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="Sidearm">
         </div>
@@ -23,8 +68,18 @@
         </div>
         <div class="armor">
             <div id="title">Armor</div>
-            <div class="box" id="light-shield"> <img src="https://media.valorant-api.com/gear/4dec83d5-4902-9ab3-bed6-a7a390761157/shop/newimage.png" alt="" class="heavyArmor">Light-Shield</div>
-            <div class="box" id="heavy-shield"> <img src="https://media.valorant-api.com/gear/822bcab2-40a2-324e-c137-e09195ad7692/shop/newimage.png" alt="" class="heavyArmor">Heavy-Shield</div>
+            <div class="box" id="light-shield"> <img
+                    src="https://media.valorant-api.com/gear/4dec83d5-4902-9ab3-bed6-a7a390761157/shop/newimage.png"
+                    alt="" class="heavyArmor">
+                <div class="textBox">400</div>
+                <div class="textBox">Light Shields</div>
+            </div>
+            <div class="box" id="heavy-shield"> <img
+                    src="https://media.valorant-api.com/gear/822bcab2-40a2-324e-c137-e09195ad7692/shop/newimage.png"
+                    alt="" class="heavyArmor">
+                <div class="textBox">1000</div>
+                <div class="textBox">Heavy Shields</div>
+            </div>
         </div>
         <div class="Shotgun">
         </div>
