Add values to modal

--- a/index.html
+++ b/index.html
@@ -57,6 +57,36 @@
                     </div>
                 </div>
             </div>
+
+            <div class="damage">
+                <div class="damageTitle">
+                    Damage
+                    <div class="numeros-disparo">0-15m</div>
+                    <div class="numeros-disparo">15-30m</div>
+                    <div class="numeros-disparo">30-60m</div>
+                </div>
+                <div class="damageInfo">
+                    HEAD
+                    <div class="num">1</div>
+                    <div class="num">2</div>
+                    <div class="num">3</div>
+
+                </div>
+                <div class="damageInfo">
+                    BODY
+                    <div class="num">1</div>
+                    <div class="num">2</div>
+                    <div class="num">3</div>
+                </div>
+                <div class="damageInfo">
+                    LEGS
+                    <div class="num">1</div>
+                    <div class="num">2</div>
+                    <div class="num">3</div>
+                </div>
+
+            </div>
+
         </div>
         <div class="Sidearm">
         </div>
